--- a/work/index.html
+++ b/work/index.html
@@ -59,31 +59,31 @@
         <div class="gallery">
           <div class="gallery-item">
             <a href="childrenstores.html">
-              <img src="/src/images/childrenstores.jpg" alt="Children Stores">
+              <i class="fa-solid fa-family" style="color: #D4AF37;"></i>
               <p>Children Stores</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="drama.html">
-              <img src="/src/images/drama.jpg" alt="Drama">
+              <i class="fa-duotone fa-solid fa-masks-theater" style="--fa-primary-color: #AEC6CF; --fa-secondary-color: #cfb7ae;"></i>
               <p>Drama</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="philosophy.html">
-              <img src="/src/images/philosophy.jpg" alt="Philosophy">
+              <i class="fa-sharp fa-regular fa-face-thinking" style="color: #D4AF37;"></i>
               <p>Philosophy</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="poetry.html">
-              <img src="/src/images/poetry.jpg" alt="Poetry">
+              <i class="fa-sharp fa-solid fa-leaf-oak" style="color: #D4AF37;"></i>
               <p>Poetry</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="torahcommentary.html">
-              <img src="/src/images/torahcommentary.jpg" alt="Torah Commentary">
+              <i class="fa-solid fa-scroll-torah" style="color: #D4AF37;"></i>
               <p>Torah Commentary</p>
             </a>
           </div>
