--- a/work/index.html
+++ b/work/index.html
@@ -59,7 +59,7 @@
         <div class="gallery">
           <div class="gallery-item">
             <a href="childrenstores.html">
-              <i class="fa-solid fa-family" style="color: #D4AF37;"></i>
+              <i class="fa-solid fa-family" style="color: black;"></i>
               <p>Children Stores</p>
             </a>
           </div>
@@ -71,19 +71,19 @@
           </div>
           <div class="gallery-item">
             <a href="philosophy.html">
-              <i class="fa-sharp fa-regular fa-face-thinking" style="color: #D4AF37;"></i>
+              <i class="fa-sharp fa-regular fa-face-thinking" style="color: black;"></i>
               <p>Philosophy</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="poetry.html">
-              <i class="fa-sharp fa-solid fa-leaf-oak" style="color: #D4AF37;"></i>
+              <i class="fa-sharp fa-solid fa-leaf-oak" style="color: black;"></i>
               <p>Poetry</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="torahcommentary.html">
-              <i class="fa-solid fa-scroll-torah" style="color: #D4AF37;"></i>
+              <i class="fa-solid fa-scroll-torah" style="color: black;"></i>
               <p>Torah Commentary</p>
             </a>
           </div>
