--- a/work/index.html
+++ b/work/index.html
@@ -59,25 +59,25 @@
         <div class="gallery">
           <div class="gallery-item">
             <a href="childrenstores.html">
-              <i class="fa-solid fa-family" style="color: black;"></i>
+              <i class="fa fa-book" style="color: black;"></i>
               <p>Children Stores</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="drama.html">
-              <i class="fa-duotone fa-solid fa-masks-theater" style="--fa-primary-color: #AEC6CF; --fa-secondary-color: #cfb7ae;"></i>
+              <i class="fa-duotone fa-solid fa-masks-theater" style="--fa-primary-color: black; --fa-secondary-color: #cfb7ae;"></i>
               <p>Drama</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="philosophy.html">
-              <i class="fa-sharp fa-regular fa-face-thinking" style="color: black;"></i>
+              <i class="fa fa-university" style="color: black;"></i>
               <p>Philosophy</p>
             </a>
           </div>
           <div class="gallery-item">
             <a href="poetry.html">
-              <i class="fa-sharp fa-solid fa-leaf-oak" style="color: black;"></i>
+              <i class="fa fa-pagelines" style="color: black;"></i>
               <p>Poetry</p>
             </a>
           </div>
